除记忆功能外，其他功能已经完成修改并测试正常了，还差初始数据提交脚本